--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
         <!-- factories -->
         <script src="./app/factories/factory-todo.js"></script>
         <script src="./app/factories/factory-user.js"></script>
+        <script src="./app/factories/factory-filter.js"></script>
         <!-- controllers -->
         <script src="app/controllers/control-add-task.js"></script>
         <script src="app/controllers/control-detail-task.js"></script>
